--- a/store/blocks/desktop/sreen/main_slider.jsonc
+++ b/store/blocks/desktop/sreen/main_slider.jsonc
@@ -2,7 +2,8 @@
   "responsive-layout.desktop": {
     "children": [
       "flex-layout.row#desktop__main-slider",
-      "rich-text#title-section-one-desktop",
+     // "flex-layout.row#global__main-shelf--container",
+       "rich-text#title-section-one-desktop",
       "flex-layout.row#home--slider",
       "rich-text#title-section-two-desktop",
       "flex-layout.row#home--slider-two",
